# npz-web-viewer

./: LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
npz_viewer_backend/: .gitignore  Dockerfile  pyproject.toml
npz_viewer_backend/npz_viewer_backend/app/: main.py
npz_viewer_backend/tests/: upload_test.py
npz_viewer_client/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
npz_viewer_client/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  sitemap.ts
npz_viewer_client/app/(dashboard)/: page.tsx
npz_viewer_client/app/api/upload/: route.ts
npz_viewer_client/components/dashboard/: chart.tsx  data-table.tsx  file-uploader.tsx  heatmap.tsx  scatter3d.tsx  surface3d.tsx
npz_viewer_client/components/dashboard/charts/: greyscale.tsx  scatter3d.tsx  scatterplot.tsx  surface3d.tsx
npz_viewer_client/components/dashboard/copy/: CopyButton.tsx
npz_viewer_client/components/dashboard/data-table/: DataTable.tsx  MultiDimensionalArray.tsx  Table2d.tsx
npz_viewer_client/components/dashboard/file-uploader/: FileDropzone.tsx  FileUploader.tsx  UploadButton.tsx
npz_viewer_client/components/dashboard/ml/: ClusteringPanel.tsx  ClusteringVisualization.tsx  DimensionalityReductionPanel.tsx  DimensionalityVisualization.tsx  MLPanel.tsx  index.ts
npz_viewer_client/components/fonts/: fonts.ts
npz_viewer_client/components/ui/: popover-cultui.tsx  texture-wrapper.tsx
npz_viewer_client/public/: robots.txt  sitemap.xml
npz_viewer_client/utils/: csv-utils.ts
