[tool.poetry]
name = "npz-viewer-backend"
version = "0.1.0"
description = ""
authors = ["anipr2002 <anirudh.panchangamranganath@study.thws.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
numpy = "^2.2.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
