[tool.poetry]
name = "npz-viewer-backend"
version = "0.1.0"
description = ""
authors = ["anipr2002 <anirudh.panchangamranganath@study.thws.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"
numpy = "^1.26.2"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
